[Code style] Apply clean-up and formatter on Main plug-ins